# Text-to-Shot

./: .gitignore  PROJECT_PLAN.md  README.md  TECHNICAL_DESIGN.md  generate_storyboard.py  pyproject.toml  train.py
configs/: default.yaml
data/: test_index.json
scripts/: preprocess_et_data.py  verify_data.py
src/: __init__.py
src/data/: dataset.py
src/models/: __init__.py  denoiser.py  diffusion.py  film.py  interaction.py
src/pipeline/: __init__.py  camera_trajectory.py  shot_decomposer.py  storyboard_generator.py  storyboard_renderer.py
src/utils/: smpl_utils.py  toric.py
