[project]
name = "script-to-camera"
version = "0.1.0"
description = "Script-to-Camera: Generating Cinematic Camera Motion Trajectories from Screenplays via Diffusion Models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # Text Processing
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",

    # Visualization
    "matplotlib>=3.7.0",
    "Pillow>=9.5.0",

    # Experiment Tracking
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",

    # Data Processing
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "PyYAML>=6.0",
    "einops>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "ipykernel>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
